tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.diagnostic
diagnostic error code=P0001 family=parser message="unterminated function body" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" bytes=31
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" line=3 column=1 end_line=3 end_column=1 byte_start=31 byte_end=31 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari:3:1\n   |\n 3 | \n   | ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" line=1 column=18 end_line=1 end_column=19 byte_start=17 byte_end=18 message="function body starts here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari:1:18\n   |\n 1 | fn main() -> i64 {\n   |                  ^"
  Note index=0 location=none message="the parser reached the next declaration or end of file before this construct was closed"
  Help index=0 location=none message="add a matching } before continuing"
